# TissueMorphology

./: .gitignore  CMakeLists.txt  README.md  VISUALIZATION_GUIDE.md  visualize_chaste_results.py
apps/: CMakeLists.txt  params-Node2d.ini  params-Vertex2d.ini
apps/config/: default_params.ini
apps/src/: CryptBuddingApp.cpp  CryptBuddingApp.cpp.bak  CryptBuddingParams.hpp  CryptBuddingSummaryModifier.hpp  CryptBuddingUtils.hpp  ExampleApp_TissueMorphology.cpp  PvdFixUtils.hpp  RunNode2d.hpp  RunNode3d.hpp  RunVertex2d.hpp  RunVertex3d.hpp
docker/: .dockerignore  Dockerfile  build_and_push.sh
docs/: CELL_PROLIFERATION_IMPLEMENTATION.md  CONSTITUTIVE_EQUATIONS.tex  ConstitutiveEquations_CellCycles.md  ConstitutiveEquations_Forces.md  DYNAMIC_ECM_AND_PROLIFERATION.md  ECM_STIFFNESS_NOTES.md  ECM_VISUALIZATION.md  INVASIVE_FRONT.md  PARAVIEW_ECM_GRID.md  THREE_FACTOR_MODEL.md  model_constants_table.tex
experiments/2dECMStiffness/: README.md  analyse_crypt_budding.py  submit_sweep.sh
experiments/CryptBudding/: README.md  analyse_crypt_budding.py  fetch_and_analyse.sh  simple_crypt_count.py  submit_sweep.sh  timestep_summary.py
hpc/: README.md  setup_hpc.sh  submit_compile_test.sh  submit_crypt_budding_sweep.sh  submit_test.sh  submit_vertex_organoid.sh
invasion_analysis_output/: invasion_summary.txt  invasion_summary_averaged.txt
output/visualization/: create_invasion_animations.py  create_visualizations.py  export_heart_images.py  plot_invasion_analysis.py  visualize_chaste_results.py  visualize_heart_fixed.py  visualize_invasive_front.py  visualize_organoids.py
scripts/: analyse_crypt_budding.py  check_simulation_progress.sh  run_ecm_stiffness_sweep.sh  run_openmp_parallel.sh  run_parallel_ecm_invasion.sh  run_parallel_painter.sh  test_openmp_speedup.sh
src/: ApicalConstrictionForce.hpp  BasementMembraneForce.hpp  CellPolarityForce.hpp  CellPolarityWriter.hpp  ContinuousPvdModifier.hpp  CurvatureBendingForce.hpp  DifferentialAdhesionForce.hpp  DynamicECMContactGuidanceForce.hpp  DynamicECMContactGuidanceForce3d.hpp  DynamicECMField.hpp  DynamicECMField3d.hpp  ECMConfinementForce.hpp  ECMConfinementForce3d.hpp  ECMContactGuidanceForce.hpp  ECMFieldWriter.hpp  ECMFieldWriter3d.hpp  FastNagaiHondaForce.hpp  Hello_TissueMorphology.cpp  Hello_TissueMorphology.hpp  LocalTangentVertexBasedDivisionRule.hpp  LumenPressureForce.hpp  OrganoidCellFactory.hpp  RadialVertexBasedDivisionRule.hpp  RingOutlineWriter.hpp  RingSmoothingForce.hpp  RingSpringForce.hpp  RingTopologyTracker.hpp  SimProfiler.hpp  SurfaceMeshWriter.hpp  SurfaceSmoothingForce.hpp  SurfaceSpringForce.hpp  SurfaceTopologyTracker.hpp  TangentialCentreBasedDivisionRule.hpp  TimedForce.hpp  UniformContactInhibitionCellCycleModel.hpp  UniformContactInhibitionGenerationalCellCycleModel.hpp
test/: CMakeLists.txt  ContinuousTestPack.txt  README.html  README.md  Test2dApicalConstriction.hpp  Test2dCryptBuddingNodeBased.hpp  Test2dCryptBuddingVertexBased.hpp  Test2dDynamicECMInvasion.cpp  Test2dPainterReplication.hpp  Test2dThresholdECMForce.hpp  Test3dCryptOrganoid.hpp  Test3dCryptOrganoidQuick.hpp  Test3dVertexCryptOrganoid.hpp  Test3dVertexECMInteraction.hpp  TestHello_TissueMorphology.hpp  TestOrganoidFormation.hpp  TestThresholdECMForce.hpp
test/CryptBudding/: TestCryptBudding.hpp
test/CryptBudding2d/: Test2dCryptBuddingNodeBased.hpp  Test2dCryptBuddingVertexBased.hpp  parameters.md
test/ECMForces/: Test3dVertexECMInteraction.hpp  experiment_design.md  parameters.md
test/Invasion/: Test2dDynamicECMInvasion.hpp  Test2dInvasiveFront.hpp  experiment_design.md  parameters.md
test/redundent/CryptBudding2d/: Test2dCryptBuddingNodeBased.hpp  Test2dCryptBuddingVertexBased.hpp  experiment_design.md  parameters.md
test/redundent/CryptBudding3d/: Test3dCryptOrganoid.hpp  Test3dCryptOrganoidQuick.hpp  Test3dOrganoidFormation.cpp  Test3dOrganoidFormation.hpp  Test3dVertexCryptOrganoid.hpp  experiment_design.md  parameters.md
visualization/: animate_organoids.py  enhanced_visualizations.py  export_all_timesteps.py  export_ecm_snapshots.py  export_ecm_snapshots_vertical.py  plot_invasion_analysis_averaged.py  simple_viz.py  update_pvd_files.py  visualize_3d_organoids.py  visualize_dynamic_ecm.py  visualize_invasive_front_simple.py  visualize_organoid_tissue.py
